--- a/assets/custom.css
+++ b/assets/custom.css
@@ -396,7 +396,7 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
 }
 
 .s_getting_start_body>div img {
-  background: url(image.png), linear-gradient(115.55deg, #5460E5 1.31%, #63D2DE 100%);
+  background: linear-gradient(115.55deg, #5460E5 1.31%, #63D2DE 100%);
 }
 
 @media only screen and (max-width:1279px) {
@@ -526,7 +526,7 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
   margin-right: 15px;
 }
 
-.aff_form div#field_2_7 span.num {
+.aff_form div#field_3_7 span.num {
   padding: 6px 14px;
 }
 
@@ -543,19 +543,19 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
   margin-right: 20%;
 }
 
-.aff_form fieldset#field_2_3 {
+.aff_form fieldset#field_3_3 {
   padding-bottom: 20px;
 }
 
-.aff_form fieldset#field_2_3 .gfield_description,
+.aff_form fieldset#field_3_3 .gfield_description,
 .aff_form div#field_2_4 .gfield_description,
-.aff_form fieldset#field_2_24 .gfield_description {
+.aff_form fieldset#field_3_24 .gfield_description {
   font-size: 16px !important;
   padding: 20px 0 !important;
   font-weight: 500;
 }
 
-.aff_form fieldset#field_2_24 {
+.aff_form fieldset#field_3_24 {
   padding: 20px 0;
 }
 
@@ -592,7 +592,7 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
   color: white;
 }
 
-.footer_form div#gform_wrapper_3 {
+.footer_form div#gform_wrapper_4 {
   width: 384px;
 }
 
@@ -605,7 +605,7 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
   transform: scale(1.03);
 }
 
-.footer_form div#gform_3_validation_container {
+.footer_form div#gform_4_validation_container {
   display: none !important;
 }
 
@@ -625,7 +625,7 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
 }
 
 @media only screen and (max-width:860px) {
-  .footer_form div#gform_wrapper_3 {
+  .footer_form div#gform_wrapper_4 {
     width: 100%;
   }
 
@@ -637,4 +637,71 @@ ul#menu-learning-center>li.menu-item-has-children:hover a::after {
 .page-template-template-login footer#colophon,
 .page-template-template-signup footer#colophon {
   display: none;
+}
+
+.signup_form {
+  padding: 30px 0;
+}
+
+.signup_form input,
+.signup_form select {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  padding: 0.75rem 1rem !important;
+  border-width: 1px;
+  border-radius: 0.5rem;
+}
+
+.signup_form input.gform_button {
+  border: none;
+  background: #5433ED;
+  color: white;
+}
+
+.gform_wrapper .gform_validation_errors {
+  display: none;
+}
+
+.validation_message {
+  padding: 0;
+}
+
+
+.download_form input::placeholder {
+  color: white;
+}
+
+.download_form input {
+  width: 24rem;
+  color: white;
+  font-weight: 300;
+  padding: 0.75rem 1rem !important;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 0.75rem;
+  border: 1px solid white;
+  width: 24rem !important;
+  margin: auto;
+}
+
+.download_form input.gform_button {
+  border: none;
+  background: #5433ED;
+  width: fit-content !important;
+  font-weight: 500;
+  margin-top: 30px;
+  cursor:pointer;
+}
+
+.download_form .gfield_description {
+  background: transparent !important;
+  border: none !important;
+  color: white !IMPORTANT;
+  padding: 0 !important;
+}
+ul#menu-learning-center .menu-item {
+	padding: 2rem 0;
+	margin:0 1.5rem;
+}
+ul#menu-learning-center>li>ul.sub-menu>li>a:hover{
+	color:black !important;
 }
